# spellbook-old

./: .gitignore  README.md  docker-compose.yml
api/: .swcrc  Cargo.toml  Dockerfile  Makefile  README.md  docker-entrypoint.sh  package-lock.json  package.json  tsconfig.json
api/migrations/2022-04-11-224116_setup/: down.sql  up.sql
api/migrations/2022-04-13-201938_create/: down.sql  up.sql
api/prisma/: schema.prisma
api/prisma/migrations/20220417171444_init/: migration.sql
api/prisma/migrations/20220419004645_rm_book_id/: migration.sql
api/prisma/migrations/20220421201621_added_users_and_book_relation/: migration.sql
api/prisma/migrations/20220421201714_added_users_and_book_relation/: migration.sql
api/prisma/zod/: account.ts  command.js  command.ts  index.js  index.ts  label.ts  link.js  link.ts  session.js  session.ts  snippet.ts  team.js  team.ts  teammember.ts  user.ts  verificationtoken.ts
api/src/: app.ts  db.ts  index.ts  main.rs  schema.rs  swagger.ts
api/src/api/: command.rs  mod.rs
api/src/config/: swagger.ts
api/src/controllers/: auth.controller.ts  command.controller.ts  user.controller.ts
api/src/db/: connection.rs  mod.rs  schema.rs
api/src/db/models/: book.rs  command.rs  mod.rs
api/src/models/: command.rs
api/src/modules/auth/: auth.controller.ts  auth.route.ts  auth.schema.ts  auth.service.ts  index.ts
api/src/modules/command/: command.controller.ts  command.route.ts  command.routes.ts  command.schema.ts  command.service.ts  index.ts
api/src/modules/language/: index.ts  language.controller.ts  language.route.ts  language.service.ts
api/src/modules/snippet/: index.ts  snippet.controller.ts  (+3 more)
api/src/prisma/: schema.prisma
api/src/services/: command.service.ts  user.service.ts
api/src/utils/: search.ts  swagger.ts
cli/: Cargo.toml  package-lock.json  package.json
cli/data/: db.json
cli/source/: cli.tsx  test.tsx  ui.tsx
cli/source/utils/: pbcopy.ts
cli/src/: app.rs  cli.rs  main.rs  ui.rs
cli/src/core/: local.rs  mod.rs  remote.rs  search.rs  sync.rs
cli/src/ui/: app.rs  mod.rs
cli/src/utils/: api.rs  db.rs  mod.rs  sort.rs
cli/src/widgets/: commands_table.rs  mod.rs  notification.rs  search_bar.rs  tab_menu.rs
(+50 files in other folders)
