[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.19", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.0", features = ["serde"] }
tui = { version = "0.14", features = ["crossterm", "serde"] }
unicode-width = "0.1.9"
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.12.0", features = ["full"] }
clap = { version = "3.1.12", features = ["derive"] }
clipboard = "0.5.0"
cuid = "1.2.0"
